--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,43 @@
     transform: rotate(360deg);
   }
 }
+
+#nav-bar {
+  /* background-color:RosyBrown; */
+  background-color:Tan;
+  padding:50px;
+  height:35px;
+}
+
+#nav-buttons {
+  float:right;
+  margin:15px;
+}
+
+a {
+  color:black;
+  text-decoration:none;
+  font-size:15px;
+  padding:10px;
+}
+
+#container {
+  display:flex;
+  overflow-x:auto;
+  text-align:center;
+  border:solid;
+  width:96%;
+  padding:10px;
+  margin:10px;
+}
+
+#moomin-site {
+  border:solid;
+  color:black;
+  font-weight:bold;
+}
+
+#moomin-site:hover {
+  border:solid;
+  background-color:yellow;
+}
